--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          이야기하러 오세요! <a href="https://open.kakao.com/o/gUj45Qxe">[오픈채팅]</a><br>
          <ul>
           <li>주어진 모티브를 이용해 간단한 작업물을 만들어 보세요</li>
-          <li>Challenge를 클릭하면 매일의 도전 과제가 나옵니다.</li>
+          <li>Challenge를 클릭하면 이번주의 도전 과제가 나옵니다.</li>
           <li>Practice를 클릭하면 지난 도전 과제가 무작위로 나옵니다. (추후 패치 예정)</li>
           <li>펜과 공책으로 만든 [간단한 악보]도 DAW를 이용한 [정성들인 음원]도 모두 좋아요</li>
           <li>작업물은 보기 편한 모양으로 공유 해 주세요. 보는 사람을 배려하는 마음을 가집시다.</li>
