--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>EveryMotive</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
+  <body style="background-color: bisque;">
     <header>
       <div id="header">Every Motive</div>
     </header>
@@ -16,7 +16,8 @@
         <div id="motive"></div>
       </div>
       <div id="description">
-         이야기하러 오세요! <a href="https://open.kakao.com/o/gUj45Qxe">[오픈채팅]</a><br>
+         <div id="hello">이야기하러 오세요!</div> <a href="https://open.kakao.com/o/gUj45Qxe">[오픈채팅]</a><br>
+         <button id="modeBtn">☀ | ☾</button>
          <ul>
           <li>주어진 모티브를 이용해 간단한 작업물을 만들어 보세요</li>
           <li>Challenge를 클릭하면 이번주의 도전 과제가 나옵니다.</li>
@@ -25,14 +26,14 @@
           <li>작업물은 보기 편한 모양으로 공유 해 주세요. 보는 사람을 배려하는 마음을 가집시다.</li>
           <li>휴대폰을 이용한 저음질 촬영과 건성으로 그린 악보는 밴입니다. </li>
          </ul>
-        <div id="commentList" class="grid"></div>
       </div>
       <div id="bottons">
-        <div id="challengeBtn" class="grid">Challenge</div>
-        <div id="pracBtn" class="grid">Practice</div>
+        <div id="challengeBtn" class="grid"><button>Challenge</button></div>
+        <div id="pracBtn" class="grid"><button>Practice</button></div>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/vexflow@4.0.3/build/cjs/vexflow.js"></script>
     <script src="motive.js"></script>
+    <script src="css.js"></script>
   </body>
 </html>
