--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="motive"></div>
       </div>
       <div id="description">
-         <div id="hello">이야기하러 오세요!</div> <a href="https://open.kakao.com/o/gUj45Qxe">[오픈채팅]</a><br>
+         <div id="hello">이야기하러 오세요!</div> <a id="openChatLink" href="https://open.kakao.com/o/gUj45Qxe">[ 오픈채팅 ]</a><br>
          <button id="modeBtn">☀ | ☾</button>
          <ul>
           <li>주어진 모티브를 이용해 간단한 작업물을 만들어 보세요</li>
